--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         <div class="habilidades">
                             <h3>Habilidades</h3>
                             <ul>
-                                <li>Choque do trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Crescimento</li>
+                                <li>Clorofila</li>
                             </ul>
                         </div>
                     </div>
@@ -120,8 +120,8 @@
                         <div class="habilidades">
                             <h3>Habilidades</h3>
                             <ul>
-                                <li>Choque do trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Fogo</li>
+                                <li>Lançar chamas</li>
                             </ul>
                         </div>
                     </div>
@@ -224,8 +224,8 @@
                         <div class="habilidades">
                             <h3>Habilidades</h3>
                             <ul>
-                                <li>Choque do trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Voador</li>
+                                <li>Inner Focus</li>
                             </ul>
                         </div>
                     </div>
